fix: link text alignment in donation

--- a/src/scss/pages/_donate.scss
+++ b/src/scss/pages/_donate.scss
@@ -172,7 +172,6 @@
             text-align: center;
 
             @include media-small-tablet {
-                text-align: left;
                 white-space: nowrap;
             }
         }
